--- a/artwork/000001.markdown
+++ b/artwork/000001.markdown
@@ -1,8 +1,11 @@
 ---
 layout: page
 title: Panda On Walking Street
+aid: '000001'
 permalink: /artwork/000001
 ---
+
+ID: {{ page.aid }}
 
 <img src="/assets/images/000001_panda_on_walking_street_in_chiang_mai_2x3.jpg" class="img-fluid" alt="Panda Artwork">
 
@@ -11,6 +14,8 @@ permalink: /artwork/000001
 “panda on walking street in chiang mai, crowded street, sunny day, photo realistic, 4k”
 
 Created using MidJourney – oct 28, 2022
+
+<hr />
 
 ## Notes
 
@@ -30,6 +35,7 @@ Simon is a trained artist and designer.
 
 [simon@rapidsystemshub.com](mailto:simon@rapidsystemshub.com)
 
+<i class="fa-solid fa-paper-plane"></i>
 Send the creator a photo of where you saw this artwork!
 
 ### Gallery
