Fix URL for 000001

--- a/artwork/000001.markdown
+++ b/artwork/000001.markdown
@@ -2,7 +2,7 @@
 layout: page
 title: Panda On Walking Street
 aid: '000001'
-permalink: /artwork/000001
+permalink: /artwork/000001/
 ---
 
 ID: {{ page.aid }}
